@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.11.2-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-11-02 11:50:55, took 00:15:55, with 50 workers, on 4064 cases, 0 failed, 0 traces, 10 retries<br/>
+tested: 2025-11-02 12:22:43, took 00:12:43, with 50 workers, on 4066 cases, 0 failed, 0 traces, 2 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -1509,6 +1509,8 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/mpls-ldp30.tst">mpls-ldp30.tst</a></td><td>success</td><td>static labels with ldp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/mpls-ldp31.tst">mpls-ldp31.tst</a></td><td>success</td><td>labels from peer</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/mpls-ldp32.tst">mpls-ldp32.tst</a></td><td>success</td><td>ldp te</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/mpls-ldp33.tst">mpls-ldp33.tst</a></td><td>success</td><td>ldp with entropy label</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/mpls-ldp34.tst">mpls-ldp34.tst</a></td><td>success</td><td>ldp with alternate marking</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/mpls-nsh01.tst">mpls-nsh01.tst</a></td><td>success</td><td>nsh over ethernet</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/mpls-nsh02.tst">mpls-nsh02.tst</a></td><td>success</td><td>nsh over ethernet vlan</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/mpls-nsh03.tst">mpls-nsh03.tst</a></td><td>success</td><td>nsh over ethernet bridge</td></tr>
